--- a/chat/index.html
+++ b/chat/index.html
@@ -267,16 +267,18 @@
                         item.innerText = messages[i];
                         if (messages[i].startsWith("search result: ")) {
                             // If the message is a search result, append a button [update] after the message.
-                            let upbtn = document.createElement("button");
-                            upbtn.innerText = "update";
-                            upbtn.classList = "border border-green-500 hover:bg-green-500 px-3 rounded self-center ml-3";
                             const defLine = messages[i].substr("search result: ".length);
                             const slices = defLine.split(" ");
-                            slices.shift(); // index
+                            const index = slices.shift();
                             const defWord = slices.shift();
                             const defBody = slices.join(" ");
-                            upbtn.setAttribute("onclick", "update(\"" + defWord + "\", \"" + defBody + "\")");
-                            item.append(upbtn);
+                            if (defWord && defWord.length) {
+                                let upbtn = document.createElement("button");
+                                upbtn.innerText = "update";
+                                upbtn.classList = "border border-green-500 hover:bg-green-500 px-3 rounded self-center ml-3";
+                                upbtn.setAttribute("onclick", "update(\"" + defWord + "\", \"" + defBody + "\")");
+                                item.append(upbtn);
+                            }
                         }
                         appendLog(item);
                     }
@@ -285,6 +287,9 @@
                     document.getElementById("openmodal").click();
                     wordtoadd.value = defWord;
                     defstoadd.value = defBody;
+                };
+                window.add = function () {
+                    window.update(word.value, "");
                 };
             } else {
                 var item = document.createElement("div");
@@ -325,7 +330,8 @@
                         <div class="flex w-full self-start justify-center">
                             <input type="text" id="word" placeholder="word" class="w-2/3 sm:w-1/2 xl:w-1/3 outline outline-blue-500 self-center ml-32" />
                             <button id="searchword" class="text-white bg-blue-800 hover:bg-blue-500 px-6 py-1 rounded self-center ml-3">Search</button>
-                            <button id="openmodal" class="text-white bg-green-600 hover:bg-green-500 px-6 py-1 rounded self-center ml-3" @click="modal = 'addword'">Add</button>
+                            <button id="openmodal" @click="modal = 'addword'" style="display: none;">Open Modal</button>
+                            <button class="text-white bg-green-600 hover:bg-green-500 px-6 py-1 rounded self-center ml-3" @click="add()">Add</button>
                         </div>
                     </div>
                 </div>
