--- a/chat/index.html
+++ b/chat/index.html
@@ -18,6 +18,8 @@
 
             const word = document.getElementById("word");
             const searchword = document.getElementById("searchword");
+            const openmodal = document.getElementById("openmodal");
+            // Modal
             const wordtoadd = document.getElementById("wordtoadd");
             const defstoadd = document.getElementById("defstoadd");
             const addword = document.getElementById("addword");
@@ -273,23 +275,34 @@
                             const defWord = slices.shift();
                             const defBody = slices.join(" ");
                             if (defWord && defWord.length) {
-                                let upbtn = document.createElement("button");
-                                upbtn.innerText = "update";
-                                upbtn.classList = "border border-green-500 hover:bg-green-500 px-3 rounded self-center ml-3";
-                                upbtn.setAttribute("onclick", "update(\"" + defWord + "\", \"" + defBody + "\")");
-                                item.append(upbtn);
+                                const upBtn = document.createElement("button");
+                                upBtn.innerHTML = "update <b>" + defWord + "</b>";
+                                upBtn.classList = "border border-green-500 hover:bg-green-500 px-3 rounded self-center ml-3";
+                                upBtn.setAttribute("onclick", "openUpdateModal(\"" + defWord + "\", \"" + defBody + "\")");
+                                item.append(upBtn);
                             }
+                        } else if (messages[i] === "search: no result") {
+                            const addBtn = document.createElement("button");
+                            addBtn.innerHTML = "add <b>" + word.value + "</b>";
+                            addBtn.classList = "border border-blue-500 hover:bg-blue-500 px-3 rounded self-center ml-3";
+                            addBtn.setAttribute("onclick", "openAddModal(\"" + word.value + "\")");
+                            item.append(addBtn);
                         }
                         appendLog(item);
                     }
                 };
-                window.update = function (defWord, defBody) {
-                    document.getElementById("openmodal").click();
+                window.openUpdateModal = function (defWord, defBody, isAdd) {
+                    openmodal.click();
                     wordtoadd.value = defWord;
                     defstoadd.value = defBody;
+                    if (isAdd) {// enable add button
+                        addword.style.visibility = "visible";
+                    } else { // disable add button
+                        addword.style.visibility = "hidden";
+                    }
                 };
-                window.add = function () {
-                    window.update(word.value, "");
+                window.openAddModal = function (defWord) {
+                    window.openUpdateModal(defWord, "", true);
                 };
             } else {
                 var item = document.createElement("div");
@@ -331,7 +344,7 @@
                             <input type="text" id="word" placeholder="word" class="w-2/3 sm:w-1/2 xl:w-1/3 outline outline-blue-500 self-center ml-32" />
                             <button id="searchword" class="text-white bg-blue-800 hover:bg-blue-500 px-6 py-1 rounded self-center ml-3">Search</button>
                             <button id="openmodal" @click="modal = 'addword'" style="display: none;">Open Modal</button>
-                            <button class="text-white bg-green-600 hover:bg-green-500 px-6 py-1 rounded self-center ml-3" @click="add()">Add</button>
+                            <button class="text-white bg-green-600 hover:bg-green-500 px-6 py-1 rounded self-center ml-3" @click="openAddModal(word.value)">Add</button>
                         </div>
                     </div>
                 </div>
